# bunny-home-server

./: .env.example  package-lock.json  package.json  server.js  supabase_schema.sql
darkroom/: .gitignore  README.md  requirements.txt  server.py  start-darkroom.bat
douyin/: .gitignore  API.md  README.md  main.py  pyproject.toml  requirements.txt  start-douyin.bat
douyin/src/: __init__.py  client.py  models.py  server.py  sign.py  token_manager.py
music-dj/: .env.example  .gitignore  README.md  server.py  start-music.bat
now-playing/: README.md  now_playing_mcp.py  start-ears.bat
ombre-brain/: .env.example  .gitignore  README.md  docker-compose.yml
public/: chat.html
public/stickers/: README.md
stackchan/: .gitignore  README.md  requirements.txt  server.py  start-stackchan.bat
stackchan/firmware/: README.md
stackchan/firmware/stackchan_body/: config.example.h  stackchan_body.ino
voice-bar/: .gitignore  README.md  config.example.json  requirements.txt  server.py  start-voice.bat
voice-bar/widget-src/: sticker-view-widget.ts
