[project]
name = "douyinmcp"
version = "0.1.0"
description = "MCP server for accessing Douyin (Chinese TikTok) data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.2",
    "httpx>=0.27.0",
    "py-mini-racer>=0.6.0",
]

[project.scripts]
douyinmcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
